Add pull request trigger to GitHub Actions workflow and set environment variables to skip Homebrew bundle cask and MAS installations

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+  pull_request:
+    branches:
+      - main
+
   workflow_dispatch:
 
 jobs:
@@ -27,6 +31,9 @@ jobs:
           cp -R "$GITHUB_WORKSPACE" ~/.dotfiles
 
       - name: Run fresh setup
+        env:
+          HOMEBREW_BUNDLE_CASK_SKIP: true
+          HOMEBREW_BUNDLE_MAS_SKIP: true
         run: |
           cd ~/.dotfiles
           ./scripts/fresh.sh
