Update brewfile path in GitHub Actions workflow to use the dotfiles directory for improved organization

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
             brew \"pure\"
             brew \"stow\"
             brew \"mas\"
-          " > ~/.brewfile
+          " > ~/.dotfiles/.brewfile
 
       - name: Run fresh setup
         run: |
