Add libyaml, readline, and gmp to brewfile and update GitHub Actions workflow for test brewfile generation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,9 +42,11 @@ jobs:
             brew \"curl\"
             brew \"git\"
             brew \"git-town\"
-            brew \"jq\"
             brew \"pure\"
             brew \"stow\"
+            brew \"libyaml\"
+            brew \"readline\"
+            brew \"gmp\"
           " > ~/.dotfiles/.brewfile
 
       - name: Run fresh setup
