Enhance GitHub Actions workflow by specifying zsh as the shell for the 'Source zsh' and 'Check if fresh setup completed successfully' steps to ensure proper execution in the zsh environment.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,10 +55,12 @@ jobs:
           ./scripts/fresh.sh
 
       - name: Source zsh
+        shell: zsh {0}
         run: |
           source ~/.zshrc
 
       - name: Check if fresh setup completed successfully
+        shell: zsh {0}
         run: |
           set -e
 
