Update shell scripts to use sh instead of bash for improved compatibility and specify zsh as the shell in GitHub Actions workflow steps for consistent execution.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
 
     steps:
       - name: Clean up installed software
+        shell: zsh {0}
         run: |
           brew uninstall --ignore-dependencies --force $(brew list --formula)
           brew uninstall --cask --force $(brew list --cask)
@@ -31,10 +32,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Clone repo to home (simulate user setup)
+        shell: zsh {0}
         run: |
           cp -R "$GITHUB_WORKSPACE" ~/.dotfiles
 
       - name: Generate test brewfile
+        shell: zsh {0}
         run: |
           echo "
             brew \"git\"
