Update GitHub Actions workflow to source zsh configuration and replace asdf version checks with direct Node.js and Ruby version commands for improved clarity and execution consistency.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,8 +77,8 @@ jobs:
           brew list --version
 
           echo "=== ASDF runtimes ==="
-          asdf current nodejs
-          asdf current ruby
+          node --version
+          ruby --version
 
           echo "=== Oh My Zsh ==="
           test -d ~/.oh-my-zsh && echo "  Oh My Zsh installed"
