--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,6 +62,8 @@ jobs:
         run: |
           set -e
 
+          source ~/.zshrc
+
           echo "=== Core tools ==="
           brew --version
           git --version
@@ -70,7 +72,9 @@ jobs:
 
           echo "=== Stowed dotfiles (symlinks in HOME) ==="
           test -L ~/.zshrc && test -f ~/.zshrc && echo "  .zshrc OK"
+          test -L ~/.zprofile && test -f ~/.zprofile && echo "  .zprofile OK"
           test -L ~/.gitconfig && test -f ~/.gitconfig && echo "  .gitconfig OK"
+          test -L ~/.brewfile && test -f ~/.brewfile && echo "  .brewfile OK"
 
           echo "=== Homebrew ==="
           brew bundle check
