Update GitHub Actions workflow to include ASDF shims in the PATH for improved runtime version detection.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,6 +79,7 @@ jobs:
           brew list --version
 
           echo "=== ASDF runtimes ==="
+          export PATH="$HOME/.asdf/shims:$PATH"
           node --version
           ruby --version
 
