Add alias for pruning local branches in .gitconfig to streamline cleanup process

--- a/.gitconfig
+++ b/.gitconfig
@@ -35,6 +35,7 @@
   all = true
 
 [alias]
+  prune-local = "!git fetch -p && git branch -vv | grep ': gone]' | awk '{print $1}' | xargs git branch -D"
 	append = town append
 	diff-parent = town diff-parent
 	hack = town hack
